Fix toolbar z-index

--- a/app/frontend/stylesheets/admin/editor-blocks/editor.sass
+++ b/app/frontend/stylesheets/admin/editor-blocks/editor.sass
@@ -11,6 +11,9 @@
 .ce-inline-toolbar
   z-index: 10
 
+.ce-toolbar--opened
+  z-index: 10
+
 // OPTIONS
 .cdx-options i.icon
   height: auto
