--- a/app/frontend/stylesheets/admin/general.sass
+++ b/app/frontend/stylesheets/admin/general.sass
@@ -73,5 +73,8 @@ a > .icon:not(.fitted):last-child
   display: inline
   -moz-display: block // For Firefox
 
+  .codex-editor--toolbox-opened .ce-block--focused &
+    display: none
+
 [contenteditable]:focus:before
   color: lighten(black, 40%)
